--- a/config/micropets-dev/elephants-nodejs-mongodb/serviceclaims.yml
+++ b/config/micropets-dev/elephants-nodejs-mongodb/serviceclaims.yml
@@ -20,6 +20,7 @@ metadata:
   annotations:
     autoscaling.knative.dev/minScale: "1"
     serviceclaims.supplychain.apps.x-tanzu.vmware.com/extensions: '{"kind":"ServiceClaimsExtension","apiVersion":"supplychain.apps.x-tanzu.vmware.com/v1alpha1","spec":{"serviceClaims":{"mongodb-database-not-used":{"namespace":"mongodb"}}}}'
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/name: elephants
     app.kubernetes.io/part-of: micropets-app
@@ -47,6 +48,7 @@ metadata:
   annotations:
     autoscaling.knative.dev/minScale: "1"
     serviceclaims.supplychain.apps.x-tanzu.vmware.com/extensions: '{"kind":"ServiceClaimsExtension","apiVersion":"supplychain.apps.x-tanzu.vmware.com/v1alpha1","spec":{"serviceClaims":{"mongodb-database-not-used":{"namespace":"mongodb"}}}}'
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/name: elephants
     app.kubernetes.io/part-of: micropets-app
