--- a/config/micropets-dev/gui-angular-js/serviceclaims.yml
+++ b/config/micropets-dev/gui-angular-js/serviceclaims.yml
@@ -19,6 +19,7 @@ metadata:
   name: gui-angular-js-app-config
   annotations:
     autoscaling.knative.dev/minScale: "1"
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/name: gui
     app.kubernetes.io/part-of: micropets
