--- a/config/micropets-int/elephants-nodejs-mongodb/delivery.yml
+++ b/config/micropets-int/elephants-nodejs-mongodb/delivery.yml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     ootb.apps.tanzu.vmware.com/servicebinding-workload: "true"
     ootb.apps.tanzu.vmware.com/apidescriptor-ref: "true"
+    kapp.k14s.io/change-rule: upsert after upserting servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/name: elephants
     app.kubernetes.io/part-of: micropets-app
