--- a/config/micropets-int/elephants-nodejs-mongodb/serviceclaims.yml
+++ b/config/micropets-int/elephants-nodejs-mongodb/serviceclaims.yml
@@ -21,6 +21,7 @@ metadata:
     autoscaling.knative.dev/minScale: "1"
     kubectl.kubernetes.io/last-applied-configuration: |
       {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{"autoscaling.knative.dev/minScale":"1"},"labels":{"app.kubernetes.io/name":"elephants","app.kubernetes.io/part-of":"micropets-app","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"web","micropets/kind":"backend"},"name":"elephants-nodejs-mongodb","namespace":"micropets-int"},"spec":{"params":[{"name":"testing_pipeline_matching_labels","value":{"apps.tanzu.vmware.com/pipeline":"skip-test"}}],"serviceAccountName":"tap-default","serviceClaims":[{"name":"app-config","ref":{"apiVersion":"v1","kind":"Secret","name":"elephants-configuration"}},{"name":"mongodb-database","ref":{"apiVersion":"v1","kind":"Secret","name":"micropets-int-mongodb-k8s-credentials"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/bmoussaud/micropets-elephants"}}}}
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/name: elephants
     app.kubernetes.io/part-of: micropets-app
@@ -48,6 +49,7 @@ metadata:
     autoscaling.knative.dev/minScale: "1"
     kubectl.kubernetes.io/last-applied-configuration: |
       {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{"autoscaling.knative.dev/minScale":"1"},"labels":{"app.kubernetes.io/name":"elephants","app.kubernetes.io/part-of":"micropets-app","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"web","micropets/kind":"backend"},"name":"elephants-nodejs-mongodb","namespace":"micropets-int"},"spec":{"params":[{"name":"testing_pipeline_matching_labels","value":{"apps.tanzu.vmware.com/pipeline":"skip-test"}}],"serviceAccountName":"tap-default","serviceClaims":[{"name":"app-config","ref":{"apiVersion":"v1","kind":"Secret","name":"elephants-configuration"}},{"name":"mongodb-database","ref":{"apiVersion":"v1","kind":"Secret","name":"micropets-int-mongodb-k8s-credentials"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/bmoussaud/micropets-elephants"}}}}
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/name: elephants
     app.kubernetes.io/part-of: micropets-app
