--- a/config/micropets-dev/cats-golang/serviceclaims.yml
+++ b/config/micropets-dev/cats-golang/serviceclaims.yml
@@ -19,6 +19,7 @@ metadata:
   name: cats-golang-app-config
   annotations:
     autoscaling.knative.dev/minScale: "1"
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/name: cats
     app.kubernetes.io/part-of: micropets
