--- a/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
+++ b/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
@@ -30,12 +30,14 @@ data:
       languages: 
       - java
       - golang
+      - angular
       databases: 
       - postgres
     - name: micropets-dev
       languages: 
       - java
       - golang
+      - angular
       databases: 
       - postgres
     - name: kcd-fr-23
