--- a/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
+++ b/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
@@ -11,7 +11,7 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: kcd-fr-23
+  name: devoxx-fr-23
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -40,7 +40,7 @@ data:
       - angular
       databases: 
       - postgres
-    - name: kcd-fr-23
+    - name: devoxx-fr-23
       languages: 
       - angular
       - java
