--- a/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
+++ b/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
@@ -31,6 +31,7 @@ data:
       - java
       - golang
       - angular
+      - nodejs
       databases: 
       - postgres
     - name: micropets-dev
@@ -38,6 +39,7 @@ data:
       - java
       - golang
       - angular
+      - nodejs
       databases: 
       - postgres
     - name: devoxx-fr-23
