--- a/applications/namespaces/current/desired-namespaces.yaml
+++ b/applications/namespaces/current/desired-namespaces.yaml
@@ -20,6 +20,7 @@ metadata:
   namespace: tap-namespace-provisioning
   annotations:
     kapp.k14s.io/create-strategy: fallback-on-update
+    kapp.k14s.io/exists: ""
     namespace-provisioner.apps.tanzu.vmware.com/no-overwrite: ""
 data:
   namespaces.yaml: |
