--- a/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
+++ b/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: kappctrl.k14s.io/v1alpha1
 kind: App
 metadata:
-  name: tap-config-app
+  name: tap-config-extras
   namespace: tap-config
   annotations:
     kapp.k14s.io/change-group: tap-config/app
@@ -16,8 +16,6 @@ spec:
   template:
     - ytt:
         paths:
-          - applications/namespaces/current
           - applications/supplychains/current
   deploy:
-    - kapp:
-        rawOptions: ["--dangerous-override-ownership-of-existing-resources=true"]
+    - kapp: {}
