--- a/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
+++ b/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
@@ -2,12 +2,12 @@ apiVersion: kappctrl.k14s.io/v1alpha1
 kind: App
 metadata:
   name: tap-config-extras
-  namespace: tap-config
+  namespace: tap-config-extras
   annotations:
     kapp.k14s.io/change-group: tap-config/app
     kapp.k14s.io/change-rule: "upsert after upserting tap-config/rbac"
 spec:
-  serviceAccountName: tap-config-sa
+  serviceAccountName: tap-config-extras-sa
   syncPeriod: 30s
   fetch:
     - git:
