workload cat int

--- a/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
+++ b/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
@@ -17,5 +17,6 @@ spec:
     - ytt:
         paths:
           - applications/supplychains/current
+          - applications/workloads/main/micropets
   deploy:
     - kapp: {}
