--- a/applications/workloads/main/micropets/workloads-gui.yaml
+++ b/applications/workloads/main/micropets/workloads-gui.yaml
@@ -11,6 +11,10 @@ metadata:
   annotations:
     autoscaling.knative.dev/minScale: "1"
 spec:
+  build:
+    env:
+      - name: BP_NODE_OPTIMIZE_MEMORY
+        value: true
   source:
     git:
       url: https://github.com/bmoussaud/micropets-gui-angular-js/
