--- a/applications/workloads/main/micropets/workloads-gui.yaml
+++ b/applications/workloads/main/micropets/workloads-gui.yaml
@@ -14,7 +14,7 @@ spec:
   build:
     env:
       - name: BP_NODE_OPTIMIZE_MEMORY
-        value: true
+        value: "true"
   source:
     git:
       url: https://github.com/bmoussaud/micropets-gui-angular-js/
