--- a/config/micropets-dev/aipets-java/delivery.yml
+++ b/config/micropets-dev/aipets-java/delivery.yml
@@ -7,7 +7,7 @@ metadata:
     ootb.apps.tanzu.vmware.com/apidescriptor-ref: "true"
     kapp.k14s.io/change-rule: upsert after upserting servicebinding.io/ServiceBindings
   labels:
-    app.kubernetes.io/name: birdogs
+    app.kubernetes.io/name: aipets
     app.kubernetes.io/part-of: micropets
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
