--- a/config/micropets-dev/aipets-java/delivery.yml
+++ b/config/micropets-dev/aipets-java/delivery.yml
@@ -39,7 +39,7 @@ spec:
         developer.conventions/target-containers: workload
       labels:
         app.kubernetes.io/component: run
-        app.kubernetes.io/name: birdogs
+        app.kubernetes.io/name: aipets
         app.kubernetes.io/part-of: micropets
         apps.tanzu.vmware.com/auto-configure-actuators: "false"
         apps.tanzu.vmware.com/has-tests: "true"
