--- a/config/micropets-dev/birds/serviceclaims.yml
+++ b/config/micropets-dev/birds/serviceclaims.yml
@@ -34,7 +34,7 @@ spec:
   service:
     apiVersion: services.apps.tanzu.vmware.com/v1alpha1
     kind: ResourceClaim
-    name: birds-h2-database
+    name: birds-tanzu-postgresql-database
   workload:
     apiVersion: serving.knative.dev/v1
     kind: Service
