update worload int gui

--- a/applications/workloads/main/micropets/workloads-gui.yaml
+++ b/applications/workloads/main/micropets/workloads-gui.yaml
@@ -35,3 +35,6 @@ spec:
       value: scan-policy-angular
     - name: scanning_image_policy
       value: scan-policy-angular
+    - name: userId
+      value: 1002
+
