mongodb operator on aks-eu-tap-5

--- a/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
+++ b/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
@@ -18,5 +18,6 @@ spec:
         paths:
           - applications/supplychains/current
           - applications/workloads/main/micropets
+          - applications/mongodb-operator/0.7.6
   deploy:
     - kapp: {}
