--- a/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
+++ b/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
@@ -19,5 +19,6 @@ spec:
           - applications/supplychains/current
           - applications/workloads/main/micropets
           - applications/mongodb-operator/0.7.6
+          - applications/spring-cloud-gateway/2.0.0-tap.3
   deploy:
     - kapp: {}
