--- a/applications/namespaces/current/desired-namespaces.yaml
+++ b/applications/namespaces/current/desired-namespaces.yaml
@@ -17,7 +17,7 @@ namespaces:
     - nodejs
   databases:
     - postgres
-- name: devoxx-fr-23
+- name: secret-agent
   languages:
     - angular
     - java
