--- a/applications/workloads/main/micropets/workloads-gui.yaml
+++ b/applications/workloads/main/micropets/workloads-gui.yaml
@@ -37,4 +37,6 @@ spec:
       value: scan-policy-angular
     - name: userId
       value: 1001
+    - name: gitops_commit_message
+      value: gui supplychain@cluster.local
 
