--- a/applications/workloads/main/micropets/workloads-dogs.yaml
+++ b/applications/workloads/main/micropets/workloads-dogs.yaml
@@ -27,3 +27,5 @@ spec:
     - name: testing_pipeline_matching_labels
       value:
         apps.tanzu.vmware.com/pipeline: test-golang
+    - name: gitops_commit_message
+      value: dogs supplychain@cluster.local
