--- a/applications/workloads/main/micropets/workloads-pets.yaml
+++ b/applications/workloads/main/micropets/workloads-pets.yaml
@@ -26,3 +26,5 @@ spec:
     - name: testing_pipeline_matching_labels
       value:
         apps.tanzu.vmware.com/pipeline: test-golang
+    - name: gitops_commit_message
+      value: pets-golang supplychain@cluster.local
