--- a/config/micropets-dev/cats-golang/delivery.yml
+++ b/config/micropets-dev/cats-golang/delivery.yml
@@ -32,6 +32,7 @@ spec:
         app.kubernetes.io/component: run
         app.kubernetes.io/name: cats
         app.kubernetes.io/part-of: micropets
+        apps.tanzu.vmware.com/carvel-package-workflow: "true"
         apps.tanzu.vmware.com/has-tests: "true"
         apps.tanzu.vmware.com/workload-type: web
         carto.run/workload-name: cats-golang
