--- a/applications/workloads/main/micropets/workloads-cats.yaml
+++ b/applications/workloads/main/micropets/workloads-cats.yaml
@@ -4,6 +4,7 @@ metadata:
   name: cats-golang
   namespace: micropets-int
   labels:
+    apps.tanzu.vmware.com/carvel-package-workflow: "true"    
     apps.tanzu.vmware.com/workload-type: web
     apps.tanzu.vmware.com/has-tests: "true"
     app.kubernetes.io/part-of: micropets
