change coommit msg for int

--- a/applications/workloads/main/micropets/workloads-cats.yaml
+++ b/applications/workloads/main/micropets/workloads-cats.yaml
@@ -29,4 +29,4 @@ spec:
       value:
         apps.tanzu.vmware.com/pipeline: test-golang
     - name: gitops_commit_message
-      value: cats supplychain@cluster.local
+      value: cats int supplychain@cluster.local
