--- a/applications/workloads/main/micropets/workloads-gui.yaml
+++ b/applications/workloads/main/micropets/workloads-gui.yaml
@@ -38,5 +38,5 @@ spec:
     - name: userId
       value: 1001
     - name: gitops_commit_message
-      value: gui supplychain@cluster.local
+      value: gui int supplychain@cluster.local
 
