--- a/applications/workloads/main/micropets/workloads-pets.yaml
+++ b/applications/workloads/main/micropets/workloads-pets.yaml
@@ -27,4 +27,4 @@ spec:
       value:
         apps.tanzu.vmware.com/pipeline: test-golang
     - name: gitops_commit_message
-      value: pets supplychain@cluster.local
+      value: pets int supplychain@cluster.local
