--- a/config/micropets-int/cats-golang/delivery.yml
+++ b/config/micropets-int/cats-golang/delivery.yml
@@ -9,6 +9,7 @@ metadata:
   labels:
     app.kubernetes.io/name: cats
     app.kubernetes.io/part-of: micropets
+    apps.tanzu.vmware.com/carvel-package-workflow: "true"
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
     kapp.k14s.io/app: "1681996561248327204"
