--- a/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
+++ b/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
@@ -21,5 +21,6 @@ spec:
           - applications/mongodb-operator/0.7.6          
           - applications/application-configuration-service/2.0.0
           - applications/spring-cloud-gateway/2.0.0-tap.5
+          - applications/micropets/package
   deploy:
     - kapp: {}
