--- a/applications/micropets/package/cats.yaml
+++ b/applications/micropets/package/cats.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cats-golang-app
   namespace: micropets-package
 spec:
-  serviceAccountName: tap-default
+  serviceAccountName: workload-sa
   syncPeriod: 30s
   fetch:
     - git:
