--- a/config/micropets-dev/cats-golang/delivery.yml
+++ b/config/micropets-dev/cats-golang/delivery.yml
@@ -18,6 +18,7 @@ spec:
   template:
     metadata:
       annotations:
+        apps.tanzu.vmware.com/debug: "true"
         apps.tanzu.vmware.com/live-update: "true"
         autoscaling.knative.dev/minScale: "1"
         conventions.carto.run/applied-conventions: |-
@@ -31,7 +32,6 @@ spec:
         app.kubernetes.io/component: run
         app.kubernetes.io/name: cats
         app.kubernetes.io/part-of: micropets
-        apps.tanzu.vmware.com/carvel-package-workflow: "true"
         apps.tanzu.vmware.com/has-tests: "true"
         apps.tanzu.vmware.com/workload-type: web
         carto.run/workload-name: cats-golang
