--- a/config/micropets-int/cats-golang/pets_config.yaml
+++ b/config/micropets-int/cats-golang/pets_config.yaml
@@ -24,10 +24,10 @@ stringData:
       "observability": {
         "enable": false,
         "application": "micropets",
-        "service": "pets",
+        "service": "cats",
         "cluster": "us-west",
         "shard": "primary",
-        "server": "xxxx.wavefront.com",
+        "server": "https://binz.wavefront.com",
         "token": "x-y-z-y"
       }
     }
