serviceclaims-aria.yaml

--- a/config/micropets-dev/pets-golang/serviceclaims-aria.yaml
+++ b/config/micropets-dev/pets-golang/serviceclaims-aria.yaml
@@ -26,4 +26,6 @@ spec:
       name: MP_OBSERVABILITY.ENABLE
     - key: aria.ops.for.apps.token
       name: MP_OBSERVABILITY.TOKEN
+    - key: aria.ops.for.apps.url
+      name: MP_OBSERVABILITY.SERVER
 
