--- a/applications/namespaces/current/desired-namespaces.yaml
+++ b/applications/namespaces/current/desired-namespaces.yaml
@@ -17,3 +17,9 @@ namespaces:
     - nodejs
   databases:
     - postgres
+- name: micropets-package
+  languages:
+    - java
+    - golang
+    - angular
+    - nodejs
