--- a/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
+++ b/environments/azure/aks-eu-tap-5/tap-config-extras-app.yaml
@@ -18,7 +18,7 @@ spec:
         paths:
           - applications/supplychains/current
           - applications/workloads/main/micropets
-          - applications/mongodb-operator/0.7.6          
+          #- applications/mongodb-operator/0.7.6          
           - applications/application-configuration-service/2.0.0
           - applications/spring-cloud-gateway/2.0.0-tap.5
   deploy:
