--- a/config/micropets-dev/gui-angular-js/delivery.yml
+++ b/config/micropets-dev/gui-angular-js/delivery.yml
@@ -7,6 +7,7 @@ metadata:
     ootb.apps.tanzu.vmware.com/apidescriptor-ref: "true"
     kapp.k14s.io/change-rule: upsert after upserting servicebinding.io/ServiceBindings
   labels:
+    apis.apps.tanzu.vmware.com/register-api: "false"
     app.kubernetes.io/name: gui
     app.kubernetes.io/part-of: micropets
     apps.tanzu.vmware.com/has-tests: "true"
