--- a/config/micropets-dev/cats-golang/serviceclaims-aria.yaml
+++ b/config/micropets-dev/cats-golang/serviceclaims-aria.yaml
@@ -21,6 +21,6 @@ spec:
   env:
     - key: observability.enable
       name: MP_OBSERVABILITY.ENABLE
-    - key: aria.ops.for.apps.token
+    - key: observability.token
       name: MP_OBSERVABILITY.TOKEN
 
