--- a/config/micropets-dev/fishes-golang/serviceclaims-aria.yaml
+++ b/config/micropets-dev/fishes-golang/serviceclaims-aria.yaml
@@ -21,5 +21,5 @@ spec:
   env:
     - key: observability.enable
       name: MP_OBSERVABILITY.ENABLE
-    - key: aria.ops.for.apps.token
+    - key: observability.token
       name: MP_OBSERVABILITY.TOKEN
