--- a/environments/azure/aks-eu-tap-6/tap-config-extras-app.yaml
+++ b/environments/azure/aks-eu-tap-6/tap-config-extras-app.yaml
@@ -17,9 +17,9 @@ spec:
     - ytt:
         paths:
           - applications/namespaces/new 
-          #- applications/supplychains/current
-          #- applications/workloads/main/micropets                          
-          #- applications/application-configuration-service/2.0.0
+          - applications/supplychains/current
+          - applications/workloads/main/micropets                          
+          - applications/application-configuration-service/provided
           #- applications/spring-cloud-gateway/2.0.0-tap.5
   deploy:
     - kapp: {}
