--- a/applications/spring-cloud-gateway/provided/packageinstall.yaml
+++ b/applications/spring-cloud-gateway/provided/packageinstall.yaml
@@ -1,11 +1,12 @@
 apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
 metadata:
-  name: application-configuration-service
+  name: spring-cloud-gateway
   namespace: tap-install
 spec:
   packageRef:
-    refName: application-configuration-service.tanzu.vmware.com    
-    #! ==> Use the version included in the TAP PackageRepository
+    refName:
+      spring-cloud-gateway.tanzu.vmware.com
+      #! ==> Use the version included in the TAP PackageRepository
     versionSelection: {}
   serviceAccountName: tap-install-sa
