--- a/applications/spring-cloud-gateway/provided/packageinstall.yaml
+++ b/applications/spring-cloud-gateway/provided/packageinstall.yaml
@@ -8,4 +8,5 @@ spec:
     refName: spring-cloud-gateway.tanzu.vmware.com        
     versionSelection:
       constraints: ">2.0.0"
+    prereleases: {}
   serviceAccountName: tap-install-sa
