--- a/applications/spring-cloud-gateway/provided/packageinstall.yaml
+++ b/applications/spring-cloud-gateway/provided/packageinstall.yaml
@@ -7,7 +7,7 @@ spec:
   packageRef:
     refName: spring-cloud-gateway.tanzu.vmware.com
     versionSelection:
-      constraints: ">2.0.0"
+      constraints: "2.0.0"
     prereleases:
       identifiers: [tap]
   serviceAccountName: tap-install-sa
