cats dev supplychain@cluster.local

--- a/config/micropets-dev/cats-golang/delivery.yml
+++ b/config/micropets-dev/cats-golang/delivery.yml
@@ -40,5 +40,5 @@ spec:
         resources: {}
         securityContext:
           runAsUser: 1000
-      serviceAccountName: default
+      serviceAccountName: workload-sa
 
