--- a/config/micropets-dev/cats-golang/serviceclaims.yml
+++ b/config/micropets-dev/cats-golang/serviceclaims.yml
@@ -23,6 +23,7 @@ metadata:
   labels:
     app.kubernetes.io/name: cats
     app.kubernetes.io/part-of: micropets
+    apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
     micropets/kind: backend
     app.kubernetes.io/component: run
