--- a/config/micropets-dev/cats-golang/delivery.yml
+++ b/config/micropets-dev/cats-golang/delivery.yml
@@ -31,6 +31,7 @@ spec:
         app.kubernetes.io/component: run
         app.kubernetes.io/name: cats
         app.kubernetes.io/part-of: micropets
+        apps.tanzu.vmware.com/has-tests: "true"
         apps.tanzu.vmware.com/workload-type: web
         carto.run/workload-name: cats-golang
         micropets/kind: backend
