--- a/config/micropets-dev/snakes-java/serviceclaims.yml
+++ b/config/micropets-dev/snakes-java/serviceclaims.yml
@@ -39,4 +39,31 @@ spec:
     apiVersion: serving.knative.dev/v1
     kind: Service
     name: snakes-java
+---
+apiVersion: servicebinding.io/v1alpha3
+kind: ServiceBinding
+metadata:
+  name: snakes-java-snakes-config
+  annotations:
+    autoscaling.knative.dev/max-scale: "2"
+    autoscaling.knative.dev/minScale: "1"
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
+  labels:
+    app.kubernetes.io/name: snakes
+    app.kubernetes.io/part-of: micropets
+    apps.tanzu.vmware.com/has-tests: "true"
+    apps.tanzu.vmware.com/workload-type: web
+    micropets/kind: backend
+    app.kubernetes.io/component: run
+    carto.run/workload-name: snakes-java
+spec:
+  name: snakes-config
+  service:
+    apiVersion: services.apps.tanzu.vmware.com/v1alpha1
+    kind: ResourceClaim
+    name: snakes-config
+  workload:
+    apiVersion: serving.knative.dev/v1
+    kind: Service
+    name: snakes-java
 
