cats dev supplychain@cluster.local

--- a/config/micropets-dev/cats-golang/serviceclaims.yml
+++ b/config/micropets-dev/cats-golang/serviceclaims.yml
@@ -38,4 +38,30 @@ spec:
     apiVersion: serving.knative.dev/v1
     kind: Service
     name: cats-golang
+---
+apiVersion: servicebinding.io/v1alpha3
+kind: ServiceBinding
+metadata:
+  name: cats-golang-from-config
+  annotations:
+    autoscaling.knative.dev/minScale: "1"
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
+  labels:
+    app.kubernetes.io/name: cats
+    app.kubernetes.io/part-of: micropets
+    apps.tanzu.vmware.com/has-tests: "true"
+    apps.tanzu.vmware.com/workload-type: web
+    micropets/kind: backend
+    app.kubernetes.io/component: run
+    carto.run/workload-name: cats-golang
+spec:
+  name: from-config
+  service:
+    apiVersion: services.apps.tanzu.vmware.com/v1alpha1
+    kind: ResourceClaim
+    name: cats-config
+  workload:
+    apiVersion: serving.knative.dev/v1
+    kind: Service
+    name: cats-golang
 
