--- a/config/micropets-dev/cats-golang/pets_config.yaml
+++ b/config/micropets-dev/cats-golang/pets_config.yaml
@@ -8,26 +8,21 @@ metadata:
 type: Opaque
 stringData:
   type: app-configuration
-  pets_config.json: |-
-    {
-      "service": {
-        "port": ":8181",
-        "listen": "true",
-        "mode": "RANDOM_NUMBER",
-        "frequencyError": 10,
-        "delay": {
-          "period": 200,
-          "amplitude": 0.3
-        },
-        "from": "Europ"
-      },
-      "observability": {
-        "enable": true,
-        "application": "micropets",
-        "service": "cats",
-        "cluster": "us-west",
-        "shard": "primary",
-        "server": "https://binz.wavefront.com",
-        "token": "x-y-z-y"
-      }
-    }
+  pets_config.yaml: |-    
+    service:
+      port: ":8181"
+      listen: "true"
+      mode: RANDOM_NUMBER
+      frequencyError: 10
+      delay:
+        period: 200
+        amplitude: 0.3
+      from: Europ YAML
+    observability:
+      enable: true
+      application: micropets
+      service: cats
+      cluster: us-west
+      shard: primary
+      server: https://binz.wavefront.com
+      token: x-y-z-y
