--- a/appconfig/micropets-dev/cats-golang/application.yaml
+++ b/appconfig/micropets-dev/cats-golang/application.yaml
@@ -1,2 +1,17 @@
-micropets:
+service:
+  port: ':8181'
+  listen: 'true'
+  mode: RANDOM_NUMBER
+  frequencyError: 10
+  delay:
+    period: 200
+    amplitude: 0.3
   from: Cat Kawaii Shop
+observability:
+  enable: true
+  application: micropets
+  service: cats
+  cluster: us-west
+  shard: primary
+  server: https://binz.wavefront.com
+  token: x-y-z-y
