--- a/config/micropets-dev/elephants-nodejs-mongodb/serviceclaims.yml
+++ b/config/micropets-dev/elephants-nodejs-mongodb/serviceclaims.yml
@@ -33,8 +33,8 @@ metadata:
 spec:
   name: app-config
   service:
-    apiVersion: v1
-    kind: Secret
+    apiVersion: services.apps.tanzu.vmware.com/v1alpha1
+    kind: ResourceClaim
     name: elephants-configuration
   workload:
     apiVersion: serving.knative.dev/v1
@@ -61,9 +61,9 @@ metadata:
 spec:
   name: mongodb-database
   service:
-    apiVersion: v1
-    kind: Secret
-    name: micropets-mongodb-k8s-credentials
+    apiVersion: services.apps.tanzu.vmware.com/v1alpha1:ClassClaim:elephants-mongodb
+    kind: ClassClaim
+    name: elephants-mongodb
   workload:
     apiVersion: serving.knative.dev/v1
     kind: Service
