change env name for elephants

--- a/appconfig/micropets-dev/elephants-golang/application.yaml
+++ b/appconfig/micropets-dev/elephants-golang/application.yaml
@@ -2,4 +2,4 @@ micropets:
   from: Xerox Shop
 TITLE: Micropets NodeJS App with Tanzu Application Platform
 PORT: "8080"
-ENV: TAP/1.4
+ENV: North Xerox Shop
