--- a/config/musicstore-dev/playlist-springboot-service/serviceclaims.yml
+++ b/config/musicstore-dev/playlist-springboot-service/serviceclaims.yml
@@ -31,9 +31,9 @@ metadata:
 spec:
   name: database
   service:
-    apiVersion: services.apps.tanzu.vmware.com/v1alpha1
-    kind: ClassClaim
-    name: musicstore-classclaim-pgsql
+    apiVersion: v1
+    kind: Secret
+    name: benoidb-psql-bindable
   workload:
     apiVersion: serving.knative.dev/v1
     kind: Service
