--- a/config/micropets-int/cats-golang/serviceclaims.yml
+++ b/config/micropets-int/cats-golang/serviceclaims.yml
@@ -18,27 +18,22 @@ kind: ServiceBinding
 metadata:
   name: cats-golang-app-config
   annotations:
-    autoscaling.knative.dev/minScale: "1"
-    kapp.k14s.io/identity: v1;micropets-int/carto.run/Workload/cats-golang;carto.run/v1alpha1
-    kapp.k14s.io/original: '{"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{"autoscaling.knative.dev/minScale":"1"},"labels":{"app.kubernetes.io/name":"cats","app.kubernetes.io/part-of":"micropets","apps.tanzu.vmware.com/carvel-package-workflow":"true","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"web","kapp.k14s.io/app":"1688466492763313082","kapp.k14s.io/association":"v1.548c88a6d9ced2cdcb32d8dd8662ac7c","micropets/kind":"backend"},"name":"cats-golang","namespace":"micropets-int"},"spec":{"params":[{"name":"testing_pipeline_matching_labels","value":{"apps.tanzu.vmware.com/pipeline":"test-golang"}},{"name":"gitops_commit_message","value":"cats int supplychain@cluster.local"}],"serviceClaims":[{"name":"app-config","ref":{"apiVersion":"v1","kind":"Secret","name":"cats-config"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/bmoussaud/micropets-cats-golang"}}}}'
-    kapp.k14s.io/original-diff-md5: 58e0494c51d30eb3494f7c9198986bb9
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"cats","app.kubernetes.io/part-of":"micropets","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"web","micropets/kind":"backend"},"name":"cats-golang","namespace":"micropets-int"},"spec":{"params":[{"name":"testing_pipeline_matching_labels","value":{"apps.tanzu.vmware.com/pipeline":"test-golang"}},{"name":"gitops_commit_message","value":"cats int supplychain@cluster.local"}],"serviceClaims":[{"name":"app-config","ref":{"apiVersion":"services.apps.tanzu.vmware.com/v1alpha1","kind":"ResourceClaim","name":"cats-config"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/bmoussaud/micropets-cats-golang.git"}}}}
     kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/name: cats
     app.kubernetes.io/part-of: micropets
-    apps.tanzu.vmware.com/carvel-package-workflow: "true"
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
-    kapp.k14s.io/app: "1688466492763313082"
-    kapp.k14s.io/association: v1.548c88a6d9ced2cdcb32d8dd8662ac7c
     micropets/kind: backend
     app.kubernetes.io/component: run
     carto.run/workload-name: cats-golang
 spec:
   name: app-config
   service:
-    apiVersion: v1
-    kind: Secret
+    apiVersion: services.apps.tanzu.vmware.com/v1alpha1
+    kind: ResourceClaim
     name: cats-config
   workload:
     apiVersion: serving.knative.dev/v1
