supplychain@cluster.local

--- a/config/micropets-dev/aipets-springboot/delivery.yml
+++ b/config/micropets-dev/aipets-springboot/delivery.yml
@@ -11,7 +11,7 @@ metadata:
     app.kubernetes.io/part-of: micropets
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
-    micropets/kind: backend
+    micropets/kind: notbackendanymore
     app.kubernetes.io/component: run
     carto.run/workload-name: aipets-springboot
 spec:
