--- a/config/micropets-dev/aipets-springboot/delivery.yml
+++ b/config/micropets-dev/aipets-springboot/delivery.yml
@@ -1,39 +1,20 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: serving.knative.dev/v1
+kind: Service
 metadata:
   name: aipets-springboot
   annotations:
-    kapp.k14s.io/update-strategy: fallback-on-replace
     ootb.apps.tanzu.vmware.com/servicebinding-workload: "true"
+    ootb.apps.tanzu.vmware.com/apidescriptor-ref: "true"
     kapp.k14s.io/change-rule: upsert after upserting servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/name: aipets
     app.kubernetes.io/part-of: micropets
     apps.tanzu.vmware.com/has-tests: "true"
-    apps.tanzu.vmware.com/workload-type: server
+    apps.tanzu.vmware.com/workload-type: web
     micropets/kind: backend
     app.kubernetes.io/component: run
     carto.run/workload-name: aipets-springboot
 spec:
-  selector:
-    matchLabels:
-      app.kubernetes.io/component: run
-      app.kubernetes.io/name: aipets
-      app.kubernetes.io/part-of: micropets
-      apps.tanzu.vmware.com/auto-configure-actuators: "false"
-      apps.tanzu.vmware.com/has-tests: "true"
-      apps.tanzu.vmware.com/workload-type: server
-      carto.run/workload-name: aipets-springboot
-      conventions.carto.run/framework: spring-boot
-      micropets/kind: backend
-      services.conventions.carto.run/postgres: workload
-      services.conventions.carto.run/rabbitmq: workload
-      services.conventions.carto.run/redis: workload
-      tanzu.app.live.view: "true"
-      tanzu.app.live.view.application.actuator.path: actuator
-      tanzu.app.live.view.application.actuator.port: "8080"
-      tanzu.app.live.view.application.flavours: spring-boot
-      tanzu.app.live.view.application.name: aipets-springboot
   template:
     metadata:
       annotations:
@@ -122,40 +103,4 @@ spec:
             port: 8080
             scheme: HTTP
       serviceAccountName: default
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: aipets-springboot
-  labels:
-    app.kubernetes.io/name: aipets
-    app.kubernetes.io/part-of: micropets
-    apps.tanzu.vmware.com/has-tests: "true"
-    apps.tanzu.vmware.com/workload-type: server
-    micropets/kind: backend
-    app.kubernetes.io/component: run
-    carto.run/workload-name: aipets-springboot
-spec:
-  selector:
-    app.kubernetes.io/component: run
-    app.kubernetes.io/name: aipets
-    app.kubernetes.io/part-of: micropets
-    apps.tanzu.vmware.com/auto-configure-actuators: "false"
-    apps.tanzu.vmware.com/has-tests: "true"
-    apps.tanzu.vmware.com/workload-type: server
-    carto.run/workload-name: aipets-springboot
-    conventions.carto.run/framework: spring-boot
-    micropets/kind: backend
-    services.conventions.carto.run/postgres: workload
-    services.conventions.carto.run/rabbitmq: workload
-    services.conventions.carto.run/redis: workload
-    tanzu.app.live.view: "true"
-    tanzu.app.live.view.application.actuator.path: actuator
-    tanzu.app.live.view.application.actuator.port: "8080"
-    tanzu.app.live.view.application.flavours: spring-boot
-    tanzu.app.live.view.application.name: aipets-springboot
-  ports:
-  - targetPort: 8080
-    port: 8080
-    name: http
 
